// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaListItem/> should render 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-10 MuiListItem-root makeStyles-root-2 makeStyles-root-1 MuiListItem-gutters MuiListItem-alignItemsFlexStart makeStyles-root-9"
    data-resource="dSJ24tJri4c"
    data-testid="media-list-item"
  >
    <div
      class="makeStyles-image-3 makeStyles-image-6"
    />
    <div
      class="MuiListItemText-root makeStyles-textRoot-5 makeStyles-textRoot-8"
    >
      <div
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-4 makeStyles-primaryText-7 MuiTypography-body1 MuiTypography-displayBlock"
        data-testid="triple-combo-item-text-primary"
      >
        Mucu ceda pi hahij le vitvep sadwupif kenmulo jutacu emibo cu umusosfu re cuznim reletwaj lojeibe lolmuj. http://tujle.vi/wup
      </div>
    </div>
  </div>
</div>
`;

exports[`<MediaListItem/> should render transparent 1`] = `
<div>
  <li
    class="MuiListItem-root makeStyles-root-22 makeStyles-root-21 MuiListItem-gutters MuiListItem-alignItemsFlexStart"
    data-resource="f7wy5DWM0jg"
    data-testid="media-list-item"
  >
    <div
      class="makeStyles-image-23 makeStyles-image-26"
    />
    <div
      class="MuiListItemText-root makeStyles-textRoot-25 makeStyles-textRoot-28"
    >
      <div
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-24 makeStyles-primaryText-27 MuiTypography-body1 MuiTypography-displayBlock"
        data-testid="triple-combo-item-text-primary"
      >
        Gomusja ufizowu kesoma tabuli zal koupeas dahisli wacef mo erdeko cudpiv ro. http://pu.mr/len
      </div>
    </div>
  </li>
</div>
`;

exports[`<MediaListItem/> should render with description 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-20 MuiListItem-root makeStyles-root-12 makeStyles-root-11 MuiListItem-gutters MuiListItem-alignItemsFlexStart makeStyles-root-19"
    data-resource="BCuwDhmiOFQ"
    data-testid="media-list-item"
  >
    <div
      class="makeStyles-image-13 makeStyles-image-16"
    />
    <div
      class="MuiListItemText-root makeStyles-textRoot-15 makeStyles-textRoot-18 MuiListItemText-multiline"
    >
      <div
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-14 makeStyles-primaryText-17 MuiTypography-body1 MuiTypography-displayBlock"
        data-testid="triple-combo-item-text-primary"
      >
        Def duh renaive cikofe hosvojat wac oj ibuda boga mamenuzi gupi zihwana. http://zebivher.kh/ivaovno
      </div>
      <div
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        data-testid="triple-combo-item-text-secondary"
      >
        Description
      </div>
    </div>
  </div>
</div>
`;

exports[`<MediaListItem/> should render with link 1`] = `
<div>
  <a
    aria-disabled="false"
    class="MuiBox-root MuiBox-root-38 MuiButtonBase-root MuiListItem-root makeStyles-root-30 makeStyles-root-29 MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart makeStyles-root-37"
    data-resource="BCuwDhmiOFQ"
    data-testid="media-list-item"
    href="http://example.com/url"
    role="button"
    tabindex="0"
    target="_blank"
  >
    <div
      class="makeStyles-image-31 makeStyles-image-34"
    />
    <div
      class="MuiListItemText-root makeStyles-textRoot-33 makeStyles-textRoot-36"
    >
      <div
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-32 makeStyles-primaryText-35 MuiTypography-body1 MuiTypography-displayBlock"
        data-testid="triple-combo-item-text-primary"
      >
        Juhowkel ovoro ha rejbogho kef ac aconki kekefjud voswulun kepdub optiowa ti velfo ot. http://opwawu.ph/logaku
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
</div>
`;

exports[`<MediaListItem/> should render with onClick 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiBox-root MuiBox-root-48 MuiButtonBase-root MuiListItem-root makeStyles-root-40 makeStyles-root-39 MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart makeStyles-root-47"
    data-resource="1W94gw1An_4"
    data-testid="media-list-item"
    role="button"
    tabindex="0"
  >
    <div
      class="makeStyles-image-41 makeStyles-image-44"
    />
    <div
      class="MuiListItemText-root makeStyles-textRoot-43 makeStyles-textRoot-46"
    >
      <div
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-42 makeStyles-primaryText-45 MuiTypography-body1 MuiTypography-displayBlock"
        data-testid="triple-combo-item-text-primary"
      >
        Zij di mu tu juf ugibo etauznop ofo fuz robras roru ri kadav mezwap filiwnov vukaw labtesa neane. http://seozub.ir/jor
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;
